# covid19

./: Cargo.toml
covid-blog/: Makefile  _config.yml  about.markdown
covid-blog/_posts/: 2020-03-22-back-of-the-envelope.md
db/: db_init.sql  query.sql
src/: main.rs
www/: back_of_the_envelope.md
