[package]
name = "covid19"
version = "0.1.0"
authors = ["Dave Garred <dave.garred@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = { version = "1.0.104", features = ["derive"]}
serde_json = "1.0"
postgres = {version = "0.15.2", features = ["with-serde_json"]}